fixing alignment

--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -9,8 +9,8 @@ body {
 }
 
 img {
-  width: 460px;
-  height: 345px;
+  max-width: 100%;
+  height: 300px;
 }
 
 .bio {
